--- a/Pedro.html
+++ b/Pedro.html
@@ -1,6 +1,6 @@
 function setup() {
   createCanvas(600, 600);
-  background("white");
+  background("black");
 }
 
 function draw() {
@@ -14,3 +14,4 @@ function draw() {
     rect(mouseX, mouseY, 20, 35);
   }
 }
+
